@@ -66,6 +66,8 @@ dpkg (1.17.0) UNRELEASED; urgency=low
     holds among others. Closes: #162541
   * Defer cleanup of .dpkg-new and .dpkg-tmp paths on removal to the point
     when we are definitely removing the main path.
+  * Activate file triggers on removal more accurately, only when we know
+    we are inevitably removing things.
 
  -- Guillem Jover <guillem@debian.org>  Fri, 03 Aug 2012 13:21:00 +0200
 
